--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -2,6 +2,11 @@
 * TinyOAL Changelog *
 *********************
 
+1.0.3
+-----
+- Updated bss-util headers
+- Fixed divide-by-zero errors when loading incompatible wav files
+
 1.0.2
 -----
 - Updated bss-util headers
