--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,6 +8,7 @@
 - Codecs can now be dynamically registered at runtime
 - Added M4A codec example (windows only)
 - Fixed error when destroying the engine while audio samples were still playing
+- Standardized integer types to C++11
 
 1.0.3
 -----
